<resources>
    <string name="app_name">PruebaANDROID</string>
    <string name="correo">Ingrese su correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="Registrarse">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="rut">Rut</string>
    <string name="direccion">Direccion</string>
    <string name="edad">Edad</string>
    <string name="telefono">Telefono</string>
    <string name="email">Correo</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="volver">Regresar</string>
    <string name="menu">Ir al menú</string>
    <string name="confirmarVal">Confirmar</string>
    <string name="validarr">Validar</string>
    <string name="talkts">Hablar</string>
    <string name="chip">Chip</string>



</resources>